Outer structure UI fixed for everyone for Mobile Friendly; Just change specific pages; Don't modify App.js;Structure works fine on Mobile;Profile Page UI done for Mobile/Tablet/Computer

--- a/ChatbotPortal/frontend/react/src/app/profile/ProfilePage.css
+++ b/ChatbotPortal/frontend/react/src/app/profile/ProfilePage.css
@@ -18,11 +18,34 @@
 /*    background-color: lavender;*/
 /*}*/
 
-.centeredForm {
+.centeredFormWeb {
     width: 50%;
     left: 25%;
 }
 
+.centeredFormMobile {
+    width: 100%;
+}
+
 .fixedInputHeight {
     height: 45px
+}
+
+:global(.ui.segments).segmentWeb{
+  margin: 0;
+    border: 0 solid rgba(34, 36, 38, 0.15);
+    box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
+
+}
+
+:global(.ui.form .field).imageMobile{
+  margin: 0 0 0;
+}
+
+.nameMobile{
+    padding: 0.5em 0.5em 0;
+}
+
+:global(.ui.divider).descriptionPadding{
+    margin: 0 0;
 }
